--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.20",
     "@mui/material": "^5.15.20",
+    "@pdf-lib/fontkit": "^1.1.1",
     "jspdf": "^3.0.4",
+    "pdf-lib": "^1.17.1",
     "pdfjs-dist": "^5.4.449",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
