--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "react-icons": "^5.3.0",
     "react-quill": "^2.0.0",
     "react-scripts": "5.0.1",
+    "remark-parse": "^11.0.0",
+    "remark-stringify": "^11.0.0",
+    "unified": "^11.0.5",
+    "unist-util-visit": "^5.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
